--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
