--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-bootstrap": "^2.7.4",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.1",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
     "usehooks-ts": "^2.9.1",
