--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
