--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "usehooks-ts": "^2.9.1",
+    "vanilla-tilt": "^1.8.1",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
   },
